--- a/app/views/stats/index.html.slim
+++ b/app/views/stats/index.html.slim
@@ -5,13 +5,13 @@
       br
       span The Logo
     .sidebar__content
-      = link_to root_path, class: "btn"
+      = link_to games_path(user_id: current_user.id), class: "btn"
         i.icon.icon--x-large.ph.ph-game-controller
         span Games
       = link_to stats_path, class: "btn"
         i.icon.icon--x-large.ph.ph-chart-bar
         span Stats
-      = link_to observable_games_path, class: "btn"
+      = link_to observable_games_path(user_id: current_user.id), class: "btn"
         i.icon.icon--x-large.ph.ph-clock-counter-clockwise
         span History
     .sidebar__content.sidebar__content--end
