--- a/app/assets/stylesheets/components/game-row.scss
+++ b/app/assets/stylesheets/components/game-row.scss
@@ -46,4 +46,11 @@
       width: 100%;
     }
   }
+
+  &.game-row--round {
+    justify-content: start;
+    gap: var(--op-space-medium);
+    box-shadow: inset var(--op-border-top) var(--op-color-primary-plus-four);
+    border-radius: 0;
+  }
 }
