Fix time_played on stats page not accepting nil values

--- a/app/views/stats/index.html.slim
+++ b/app/views/stats/index.html.slim
@@ -41,4 +41,6 @@
             th = stat.total_losses
             th = stat.total_games
             th = "#{stat.win_ratio.to_i}%"
-            th = Time.at((stat.time_played)).utc.strftime("%H:%M:%S")
+            th
+              - if stat.time_played
+                = Time.at((stat.time_played)).utc.strftime("%H:%M:%S")
