--- a/app/assets/stylesheets/components/game.scss
+++ b/app/assets/stylesheets/components/game.scss
@@ -29,3 +29,10 @@
     }
   }
 }
+
+@media (width <= 768px) {
+  .game {
+    grid-template-columns: none;
+    grid-template-rows: 2fr 1fr 1fr 4fr;
+  }
+}
