--- a/app/views/games/_game-row.html.slim
+++ b/app/views/games/_game-row.html.slim
@@ -5,15 +5,15 @@
   .game-row__actions
     - if game.game_users.first.user == current_user
       = button_to game, method: :delete, class: "btn btn--destructive", data: { turbo_confirm: "Are you sure?" }, alt: "Delete"
-        span Delete
+        span.game-row__text Delete
         i.icon.ph.ph-trash
       = link_to edit_game_path(game), class: "btn", alt: "Edit"
-        span Edit
+        span.game-row__text Edit
         i.icon.ph.ph-pencil-simple
     
     - if game.users.include? current_user
       = link_to game, class: "btn btn--primary"
-        span Play
+        span.game-row__text Play
         i.icon.ph.ph-play
     - elsif game.users.count < game.players_count
       = button_to "Join", game_users_path, class: "btn", params: { game_id: game, user_id: current_user}, alt: "Play"
