--- a/app/views/stats/index.html.slim
+++ b/app/views/stats/index.html.slim
@@ -7,13 +7,13 @@
     .sidebar__content
       = link_to games_path(user_id: current_user.id), class: "btn"
         i.icon.icon--x-large.ph.ph-game-controller
-        span Games
+        span.sidebar__text Games
       = link_to stats_path, class: "btn"
         i.icon.icon--x-large.ph.ph-chart-bar
-        span Stats
+        span.sidebar__text Stats
       = link_to observable_games_path(user_id: current_user.id), class: "btn"
         i.icon.icon--x-large.ph.ph-clock-counter-clockwise
-        span History
+        span.sidebar__text History
     .sidebar__content.sidebar__content--end
       .divider
       = link_to "Signed in as #{current_user.username}", edit_user_registration_path, class: "btn"
