--- a/app/views/stats/index.html.slim
+++ b/app/views/stats/index.html.slim
@@ -16,8 +16,12 @@
         span.sidebar__text History
     .sidebar__content.sidebar__content--end
       .divider
-      = link_to "Signed in as #{current_user.username}", edit_user_registration_path, class: "btn"
-      = button_to "Sign out", destroy_user_session_path, method: :delete, class: "btn btn--destructive"
+      = link_to edit_user_registration_path, class: "btn"
+        i.icon.icon--x-large.ph.ph-user-circle
+        span.sidebar__text = current_user.username
+      = button_to destroy_user_session_path, method: :delete, class: "btn btn--destructive"
+        i.icon.icon--x-large.ph.ph-sign-out
+        span.sidebar__text Sign out
   .app__content.stats
     .stats__title Stats
     = search_form_for @q, url: stats_path do |form|
