--- a/app/views/stats/index.html.slim
+++ b/app/views/stats/index.html.slim
@@ -31,6 +31,7 @@
     table.table.table--primary
       thead 
         tr 
+          th.stats__column-header = sort_link @q, :index, "Rank"
           th.stats__column-header = sort_link @q, :username, "Name"
           th.stats__column-header = sort_link @q, :total_wins, "Wins" 
           th.stats__column-header = sort_link @q, :total_losses, "Losses" 
@@ -40,6 +41,7 @@
       tbody 
         - @stats.each do |stat|
           tr 
+            th = stat.index
             th = stat.username
             th = stat.total_wins
             th = stat.total_losses
